feat(stats): set initial html structure of stats card items

--- a/app/styles/edition.scss
+++ b/app/styles/edition.scss
@@ -1,18 +1,17 @@
 @import 'variables.scss';
 @import 'mixins.scss';
 
-//| EDITION MODE                                                            |//
 .edition {
   position: relative;
   display: grid;
   grid-template-columns: repeat($edit-group-cols, 1fr);
   column-gap: $edit-group-col-gap;
   overflow: hidden;
-  width: $size-xs-archive-buttons;
+  width: $cardIcon-size-xs;
   transition: width $time-edit-buttons;
 
   &--visible {
-    $icons-width: $edit-group-cols * $size-xs-archive-buttons;
+    $icons-width: $edit-group-cols * $cardIcon-size-xs;
     $gaps-width: ($edit-group-cols - 1) * $edit-group-col-gap;
     width: $icons-width + $gaps-width;
   }
@@ -21,8 +20,8 @@
     @include button;
     @include flex-center;
     padding: 0;
-    width: $size-xs-archive-buttons;
-    height: $size-xs-archive-buttons;
+    width: $cardIcon-size-xs;
+    height: $cardIcon-size-xs;
     fill: $cold-light-blue;
     opacity: 0;
     visibility: hidden;
@@ -58,17 +57,17 @@
   @media only screen and (min-width: $media-sm) {
 
     & {
-      width: $size-sm-archive-buttons;
+      width: $cardIcon-size-sm;
 
       &--visible {
-        $icons-width: $edit-group-cols * $size-sm-archive-buttons;
+        $icons-width: $edit-group-cols * $cardIcon-size-sm;
         $gaps-width: ($edit-group-cols - 1) * $edit-group-col-gap;
         width: $icons-width + $gaps-width;
       }
 
       &__button {
-        width: $size-sm-archive-buttons;
-        height: $size-sm-archive-buttons;
+        width: $cardIcon-size-sm;
+        height: $cardIcon-size-sm;
       }
     }
   }
