--- a/app/styles/userDetail.scss
+++ b/app/styles/userDetail.scss
@@ -1,7 +1,7 @@
 @import 'variables.scss';
 @import 'mixins.scss';
 
-.user {
+.userDetail {
   display: grid;
   grid-template-areas:
   "label label"
