--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,11 +14,10 @@
 @import 'tabs.scss';
 @import 'buttons.scss';
 @import 'emoji.scss';
-@import 'user.scss';
+@import 'cards.scss';
+@import 'edition.scss';
 
-@import 'archiveWeek.scss';
 @import 'archiveEntry.scss';
-@import 'archiveEdition.scss';
 @import 'archiveNewEntry.scss';
 
 @import 'landingControls.scss';
@@ -26,4 +25,5 @@
 @import 'landingGraph.scss';
 @import 'landingWater.scss';
 
-@import 'stats.scss';
+@import 'userDetail.scss';
+@import 'userStats.scss';
