--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -44,6 +44,7 @@ $button-time-active: 0.3s;
 $header-height-xs: $header-padding-xs * 2 + $burgerBtn-size-xs;
 $header-height-md: $header-padding-md * 2 + $burgerBtn-size-md;
 $header-height-lg: $header-padding-lg * 2 + $burgerBtn-size-lg;
+$sidebar-toggle: 0.4s;
 
 //| TAB                                                                     |//
 $tab-offset-xs: 20px;
@@ -53,9 +54,16 @@ $tab-offset-lg: 40px;
 $tab-maxWidth: 360px;
 $tab-minWidth: 280px;
 
-$sidebar-toggle: 0.4s;
 
 $tab-expand: 0.6s;
+
+//| CARD                                                                    |//
+$cardIcon-size-xs: 25px;
+$cardIcon-size-sm: 30px;
+$cardIcon-size-md: 35px;
+$cardIcon-size-lg: 40px;
+
+$cardItem-padding: 5px;
 
 //| TIME                                                                    |//
 $time-hover-effect: 0.2s;
@@ -72,8 +80,6 @@ $verticalTranslation: 1s cubic-bezier(0.5,-0.5,0.5,1.5);
 
 
 $size-main-buttons: 30px;
-$size-xs-archive-buttons: 25px;
-$size-sm-archive-buttons: 30px;
 
 $size-xs-archive-add-new: 100px;
 
