--- a/app/styles/archiveEntry.scss
+++ b/app/styles/archiveEntry.scss
@@ -6,7 +6,7 @@
   display: grid;
   grid-gap: 5px;
   grid-template-columns: 1fr repeat(3, auto);
-  height: 50px;
+  min-height: 60px;
   padding: $cardItem-padding;
   position: relative;
   //: fade in out effect                                                    ://
