--- a/app/styles/userStats.scss
+++ b/app/styles/userStats.scss
@@ -18,8 +18,11 @@
   &__value {
     position: relative;
     width: 100%;
-    
+  }
 
+  &__output {
+    &--userWeight::after { content: 'kg'; }
+    &--userHeight::after { content: 'cm'; }
   }
 
   &__input {
@@ -33,6 +36,7 @@
     min-width: 50px;
     position: absolute;
     top: 0;
+    visibility: hidden;
     width: 100%;
 
     &--visible {
