feat(stats): add editing functionality of user stats props

--- a/app/styles/edition.scss
+++ b/app/styles/edition.scss
@@ -2,18 +2,31 @@
 @import 'mixins.scss';
 
 .edition {
-  position: relative;
-  display: grid;
-  grid-template-columns: repeat($edit-group-cols, 1fr);
-  column-gap: $edit-group-col-gap;
   overflow: hidden;
   width: $cardIcon-size-xs;
+  column-gap: $edit-group-col-gap;
+  display: grid;
   transition: width $time-edit-buttons;
+  position: relative;
+
+  &--archive {
+    grid-template-columns: repeat(4, 1fr);
+
+  }
+
+  &--stats {
+    grid-template-columns: repeat(2, 1fr);
+
+  }
 
   &--visible {
     $icons-width: $edit-group-cols * $cardIcon-size-xs;
     $gaps-width: ($edit-group-cols - 1) * $edit-group-col-gap;
     width: $icons-width + $gaps-width;
+  }
+
+  &--stats.edition--visible {
+    width: 2 * $cardIcon-size-xs + $edit-group-col-gap;
   }
 
   &__button {
@@ -59,10 +72,15 @@
     & {
       width: $cardIcon-size-sm;
 
+
       &--visible {
         $icons-width: $edit-group-cols * $cardIcon-size-sm;
         $gaps-width: ($edit-group-cols - 1) * $edit-group-col-gap;
         width: $icons-width + $gaps-width;
+      }
+
+      &--stats.edition--visible {
+        width: 2 * $cardIcon-size-sm + $edit-group-col-gap;
       }
 
       &__button {
