feat(logIn): create initial structure and styles of logIn section mockup

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,5 +25,6 @@
 @import 'landingGraph.scss';
 @import 'landingWater.scss';
 
+@import 'usersList.scss';
 @import 'userDetail.scss';
 @import 'userProps.scss';
