--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -30,6 +30,11 @@
   
     }
   }
+  //: APP HEADING                                                           ://
+  &__heading {
+    font-size: 2em;
+    margin: 0;
+  }
   //: APP LANDING PANEL                                                     ://
   &__landing {
     align-items: flex-start;
@@ -113,6 +118,27 @@
   &__user {
     @include flex-center;
     background-color: $cold-dark-blue;
+    height: 100%;
+    left: 0;
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    transition: opacity $user-detail-toggle, visibility 0s $user-detail-toggle;
+    visibility: hidden;
+    width: 100%;
+    z-index: 2;
+
+    &--visible {
+      opacity: 1;
+      visibility: visible;
+      transition: opacity 0s, visibility 0s;
+    }
+  }
+  //: APP LOG IN                                                            ://
+  &__logIn {
+    @include flex-center;
+    background-color: $cold-dark-blue;
+    flex-direction: column;
     height: 100%;
     left: 0;
     opacity: 0;
