--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -19,6 +19,7 @@ $media-lg: 1024px;
 $logo-aspect-ratio: 512 / 135;
 //: USER DETAILS                                                            ://
 $user-detail-toggle: 0.3s;
+$user-box-maxWidth: 500px;
 
 //: PAGE HEADER                                                             ://
 $header-padding-xs: 10px;
