--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -33,7 +33,7 @@
   //: APP HEADING                                                           ://
   &__heading {
     font-size: 2em;
-    margin: 0;
+    margin: 0.5em 0;
   }
   //: APP LANDING PANEL                                                     ://
   &__landing {
@@ -137,7 +137,7 @@
   //: APP LOG IN                                                            ://
   &__logIn {
     @include flex-center;
-    background-color: $cold-dark-blue;
+    background-color: $cold-darkest-blue;
     flex-direction: column;
     height: 100%;
     left: 0;
