--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -26,5 +26,5 @@
 @import 'landingWater.scss';
 
 @import 'usersList.scss';
-@import 'userDetail.scss';
+@import 'newUser.scss';
 @import 'userProps.scss';
