--- a/app/styles/newUser.scss
+++ b/app/styles/newUser.scss
@@ -1,7 +1,7 @@
 @import 'variables.scss';
 @import 'mixins.scss';
 
-.userDetail {
+.newUser {
   display: grid;
   grid-template-areas:
   "label label"
