--- a/app/styles/usersList.scss
+++ b/app/styles/usersList.scss
@@ -26,7 +26,7 @@
     & {
       border-radius: $br-items;
       max-height: 400px;
-      max-width: $user-box-maxWidth;
+      max-width: $newUser-box-maxWidth;
     }
   }
 }
