--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -18,8 +18,8 @@ $media-lg: 1024px;
 //: LOGO                                                                    ://
 $logo-aspect-ratio: 512 / 135;
 //: USER DETAILS                                                            ://
-$user-detail-toggle: 0.3s;
-$user-box-maxWidth: 500px;
+$newUser-toggle: 0.3s;
+$newUser-box-maxWidth: 500px;
 
 //: PAGE HEADER                                                             ://
 $header-padding-xs: 10px;
