--- a/app/styles/newUser.scss
+++ b/app/styles/newUser.scss
@@ -17,16 +17,16 @@
   row-gap: 20px;
   transform: translateX(0);
   transition:
-    opacity $user-detail-toggle,
-    transform $user-detail-toggle,
-    visibility 0s $user-detail-toggle;
+    opacity $newUser-toggle,
+    transform $newUser-toggle,
+    visibility 0s $newUser-toggle;
   visibility: hidden;
 
   &--visible {
     opacity: 1;
     transition:
-      opacity $user-detail-toggle,
-      transform $user-detail-toggle,
+      opacity $newUser-toggle,
+      transform $newUser-toggle,
       visibility 0s;
     visibility: visible;
   }
@@ -70,7 +70,7 @@
     grid-area: alert;
     height: 0;
     overflow: hidden;
-    transition: height $user-detail-toggle;
+    transition: height $newUser-toggle;
   }
 
   &__alertText {
