--- a/app/styles/userProps.scss
+++ b/app/styles/userProps.scss
@@ -16,7 +16,7 @@
     border-bottom: 2px solid $cold-darkest-blue;
   }
 
-  &__name {
+  &__label {
     display: flex;
     align-items: center;
     min-height: 40px;
