--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -46,7 +46,12 @@
     position: fixed;
     top: 0;
     transition: width $sidebar-toggle;
+    visibility: hidden;
     width: 100%;
+
+    &--visible {
+      visibility: visible;
+    }
 
     @media only screen and (min-width: $media-md) {
       padding-top: $burgerBtn-size-md + ($header-padding-md * 2);
@@ -114,30 +119,25 @@
       }
     }
   }
-  //: APP USER                                                              ://
-  &__newUser {
-    @include flex-center;
+  &__userProfile {
     background-color: $cold-darkest-blue;
-    height: 100%;
+    bottom: 0;
     left: 0;
-    opacity: 0;
     position: fixed;
+    right: 0;
     top: 0;
     transition: opacity $newUser-toggle, visibility 0s $newUser-toggle;
     visibility: hidden;
-    width: 100%;
     z-index: 2;
 
     &--visible {
-      opacity: 1;
+      transition: opacity $newUser-toggle, visibility 0s;
       visibility: visible;
-      transition: opacity 0s, visibility 0s;
     }
   }
   //: APP LOG IN                                                            ://
   &__logIn {
     @include flex-center;
-    background-color: $cold-darkest-blue;
     flex-direction: column;
     height: 100%;
     left: 0;
@@ -147,12 +147,29 @@
     transition: opacity $newUser-toggle, visibility 0s $newUser-toggle;
     visibility: hidden;
     width: 100%;
-    z-index: 2;
 
     &--visible {
       opacity: 1;
-      visibility: visible;
-      transition: opacity 0s, visibility 0s;
+      visibility: inherit;
+      transition: opacity $newUser-toggle, visibility 0s;
+    }
+  }
+  //: APP USER                                                              ://
+  &__newUser {
+    @include flex-center;
+    height: 100%;
+    left: 0;
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    transition: opacity $newUser-toggle, visibility 0s $newUser-toggle;
+    visibility: hidden;
+    width: 100%;
+
+    &--visible {
+      opacity: 1;
+      visibility: inherit;
+      transition: opacity $newUser-toggle, visibility 0s;
     }
   }
   //: APP CREATE NEW USER BUTTON                                            ://
