--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -123,6 +123,7 @@
     background-color: $cold-darkest-blue;
     bottom: 0;
     left: 0;
+    opacity: 0;
     position: fixed;
     right: 0;
     top: 0;
@@ -131,6 +132,7 @@
     z-index: 2;
 
     &--visible {
+      opacity: 1;
       transition: opacity $newUser-toggle, visibility 0s;
       visibility: visible;
     }
