--- a/app/styles/userProps.scss
+++ b/app/styles/userProps.scss
@@ -7,6 +7,10 @@
   column-gap: 10px;
   grid-template-columns: 40% 1fr auto;
   padding: $cardItem-padding;
+    
+  &--stats {
+    grid-template-columns: 60% 1fr;
+  }
 
   &--editMode {
     background-color: $cold-darkest-blue;
@@ -20,7 +24,8 @@
     display: flex;
     align-items: center;
     min-height: 40px;
-    
+    font-size: 0.9em;
+
     &--editMode {
       color:$cold-dark-blue;
     }
