feat(settings): set content for settings tab dynamically

--- a/app/styles/cards.scss
+++ b/app/styles/cards.scss
@@ -37,6 +37,10 @@
     min-width: $tab-minWidth;
     padding: 5px;
     width: 100%;
+
+    &--settings {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__heading {
