feat(settings): update settings container height on alert toggle

--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -1,6 +1,6 @@
 //#region [ Horizon ] COLORS
 // BLUE
-$blue-black: #041927;
+$blue-black: #041927a4;
 $cold-darkest-blue: #112f44;
 $cold-dark-blue: #274c66;
 $cold-blue: #4a8eb2;
