--- a/app/styles/cards.scss
+++ b/app/styles/cards.scss
@@ -106,3 +106,26 @@
     }
   }
 }
+
+.profile {
+  column-gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin-top: 10px;
+  max-width: $tab-maxWidth;
+  min-width: $tab-minWidth;
+  width: 100%;
+
+  &__button {
+    @include button;
+    @include primaryButton;
+    
+    &--logOut {
+
+    }
+
+    &--remove {
+      background-color: $warm-red;
+    }
+  }
+}
