--- a/app/styles/archiveEntry.scss
+++ b/app/styles/archiveEntry.scss
@@ -9,20 +9,9 @@
   min-height: 60px;
   padding: $cardItem-padding;
   position: relative;
-  // fade in out effect
-  //transform: translateX(-100%);
   transition:
     background-color $time-edit-buttons,
     transform $archive-entries-fade-time;
-
-  // fade in out effect
-  &--visible {
-    //transform: translateX(0);
-  }
-
-  /* &--fadeIn {
-    animation: fade 0.5s;
-  } */
 
   &--last {
     grid-template-columns: 1fr repeat(4, auto);
@@ -41,13 +30,19 @@
   }
 
   &__remove {
+    @include button;
     @include flex-center;
-    width: $cardIcon-size-xs;
+    fill: $cold-light-blue;
     height: $cardIcon-size-xs;
     overflow: hidden;
     padding: 0;
-    fill: $cold-light-blue;
     transition: width $time-edit-buttons, fill $time-hover-effect;
+    width: $cardIcon-size-xs;
+
+    @media only screen and (min-width: $media-sm) {
+      height: $cardIcon-size-sm;
+      width: $cardIcon-size-sm;
+    }
 
     &--hidden {
       width: 0;
