--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,7 +2,7 @@
 @import 'mixins.scss';
 
 .app {
-  background-color: $cold-dark-blue;
+  background-color: $cold-darkest-blue;
   height: 100%;
   min-height: 100vh;
   width: 100%;
