--- a/app/styles/landingWater.scss
+++ b/app/styles/landingWater.scss
@@ -2,7 +2,7 @@
 @import 'mixins.scss';
 
 .water {
-  background-color: $cold-darkest-blue;
+  background-color: $cold-dark-blue;
   bottom: 0;
   left: 0;
   opacity: 1;
@@ -31,7 +31,7 @@
 
   &::after {
     content: '';
-    background-color: $cold-darkest-blue;
+    background-color: $cold-dark-blue;
     position: absolute;
     bottom: -95px;
     left: 0;
@@ -50,7 +50,7 @@
   width: 100%;
 
   &::after {
-    background-color: $cold-darkest-blue;
+    background-color: $cold-dark-blue;
     content: '';
     height: 100px;
     left: 0;
@@ -63,7 +63,7 @@
 
 .wave {
   @include flex-center;
-  fill: $cold-darkest-blue;
+  fill: $cold-dark-blue;
   width: 100%;
   animation: waves 15s linear infinite;
 
@@ -80,7 +80,6 @@
   }
 
   &__svg {
-    fill: $cold-darkest-blue;
     width: 100%;
   }
 }
