feat(water): add split water animation on 3 depth levels

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -68,6 +68,14 @@
       }
     }
   }
+
+  &__water {
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
   
   &__sidebar {
     align-items: center;
