--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -1,10 +1,13 @@
 //#region [ Horizon ] COLORS
 // BLUE
-$blue-black: #041927a4;
-$cold-darkest-blue: #112f44;
-$cold-dark-blue: #274c66;
-$cold-blue: #4a8eb2;
-$cold-light-blue: #d3f3ff;
+$blue-dark-4: #041927a4;
+$cold-dark-3: #112f44;
+$cold-dark-2: #1d445f;
+$cold-dark-1: #274c66;
+$blue: #3f7ea0;
+$blue-light-1: #549dc4;
+$blue-light-2: #75b3d4;
+$cold-light-3: #d3f3ff;
 // WARM
 $warm-red: #aa494c;
 $warm-dark-orange: #ba6353;
