--- a/app/styles/archiveEntry.scss
+++ b/app/styles/archiveEntry.scss
@@ -18,11 +18,11 @@
   }
 
   &--edit-mode {
-    background-color: $cold-darkest-blue;
+    background-color: $blue-dark-3;
   }
 
   &:not(:last-child) {
-    border-bottom: 2px solid $cold-darkest-blue;
+    border-bottom: 2px solid $blue-dark-3;
   }
   
   &__add {
@@ -32,7 +32,7 @@
   &__remove {
     @include button;
     @include flex-center;
-    fill: $cold-light-blue;
+    fill: $blue-light-2;
     height: $cardIcon-size-xs;
     overflow: hidden;
     padding: 0;
@@ -58,12 +58,12 @@
     margin: 0;
     padding: 0.6rem 0.8rem;
     font-weight: bold;
-    color: $cold-light-blue;
+    color: $blue-light-2;
     border-radius: 5px;
     transition: background-color $time-hover-effect;
     
     &:hover {
-      background-color: $cold-blue;
+      background-color: $blue;
     }
   }
 
@@ -77,7 +77,7 @@
     transition: color $time-edit-buttons;
   
     &--edit-mode {
-      color: $cold-dark-blue;
+      color: $blue-dark-2;
     }
   }
   
@@ -91,7 +91,7 @@
     }
   
     &--date {
-      color: $cold-blue;
+      color: $blue;
       font-size: 0.85rem;
       margin-top: 3px;
     }
@@ -103,7 +103,7 @@
     font-weight: bold;
     width: $cardIcon-size-xs;
     height: $cardIcon-size-xs;
-    border: 2px solid $cold-light-blue;
+    border: 2px solid $blue-light-2;
     border-radius: 50%;
   
     @media only screen and (min-width: $media-sm) {
