--- a/app/styles/logo.scss
+++ b/app/styles/logo.scss
@@ -8,12 +8,12 @@
   width: 100%;
 
   &__svg {
-    fill: $cold-blue;
+    fill: $blue;
     pointer-events: all;
     width: 100%;
 
     &--color {
-      fill: $cold-light-blue;
+      fill: $blue-light-3;
       height: 100%;
       left: 0;
       position: absolute;
