--- a/app/styles/overall.scss
+++ b/app/styles/overall.scss
@@ -22,8 +22,8 @@ html {
 }
 
 body {
-  background: #fafafa;
-  color: $cold-light-blue;
+  background: $blue-dark-3;
+  color: $blue-light-3;
   font-family: 'Comfortaa', Arial, sans-serif;
   font-weight: 400;
 }
