--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -1,13 +1,14 @@
 //#region [ Horizon ] COLORS
 // BLUE
-$blue-dark-4: #041927a4;
-$cold-dark-3: #112f44;
-$cold-dark-2: #1d445f;
-$cold-dark-1: #274c66;
+$blue-dark-5: #041927a4;
+$blue-dark-4: #102a3d;
+$blue-dark-3: #112f44;
+$blue-dark-2: #1d445f;
+$blue-dark-1: #274c66;
 $blue: #3f7ea0;
 $blue-light-1: #549dc4;
 $blue-light-2: #75b3d4;
-$cold-light-3: #d3f3ff;
+$blue-light-3: #d3f3ff;
 // WARM
 $warm-red: #aa494c;
 $warm-dark-orange: #ba6353;
