--- a/app/styles/archiveNewEntry.scss
+++ b/app/styles/archiveNewEntry.scss
@@ -4,7 +4,7 @@
 .newEntry {
   @include flex-center;
   visibility: hidden;
-  background-color: $cold-dark-blue;
+  background-color: $blue-dark-2;
   position: fixed;
   top: 0;
   left: 0;
@@ -51,14 +51,14 @@
     @include flex-center;
     flex-direction: column;
     grid-area: value;
-    border: 4px solid $cold-light-blue;
-    background-color: $cold-darkest-blue;
+    border: 4px solid $blue-light-2;
+    background-color: $blue-dark-3;
     //margin: -10px 0;
     border-radius: 50%;
-    color: $cold-blue;
+    color: $blue;
     box-shadow:
-      0 0 15px rgba($color: $cold-blue, $alpha: 0.5),
-      inset 0 0 30px rgba($color: $cold-blue, $alpha: 0.6);
+      0 0 15px rgba($color: $blue, $alpha: 0.5),
+      inset 0 0 30px rgba($color: $blue, $alpha: 0.6);
     width: 100%;
     height: 100%;
   }
@@ -83,10 +83,10 @@
     @include flex-center;
     width: 100%;
     height: 100%;
-    fill: $cold-blue;
+    fill: $blue;
 
     &:hover {
-      fill: $cold-light-blue;
+      fill: $blue-light-2;
     }
 
     &--decrease { grid-area: down; };
