--- a/app/styles/mixins.scss
+++ b/app/styles/mixins.scss
@@ -13,14 +13,14 @@
 }
 
 @mixin primaryButton {
-  background-color: $cold-darkest-blue;
+  background-color: $blue-dark-3;
   border-radius: $br-items;
-  box-shadow: 0 2px 4px rgba($color: $cold-darkest-blue, $alpha: 1);
-  color: $cold-light-blue;
+  box-shadow: 0 2px 4px rgba($color: $blue-dark-4, $alpha: 0.5);
+  color: $blue-light-2;
   font-weight: 700;
   padding: 0.8em 0.5em;
   
   &:hover {
-    background-color: $cold-blue;    
+    background-color: $blue;    
   }
 }
