--- a/app/styles/landingGraph.scss
+++ b/app/styles/landingGraph.scss
@@ -17,41 +17,38 @@
     margin: 0;
     padding: 0;
   }
-
-  &__levels {
-    width: 100%;
-    position: relative;
-  }
   
   &__level {
-    border-bottom: $water-measure-size-xs dashed $blue;
+    border-radius: 0 50px 50px 0;
     color: $blue;
     font-weight: 700;
-    font-size: 0.7em;
-    left: 5px;
+    font-size: 0.8em;
+    left: 0;
+    padding: 0.5em 0.8em 0.5em 2.5em;
     position: absolute;
-    right: 0;
     transition: bottom $verticalTranslation;
+    z-index: -1;
   
     &--avg {
+      background-color: $blue-light-2;
     }
   
     &--min {
-      
+      background-color: $warm-orange;
+    }
+
+    @media only screen and (min-width: $media-sm) {
+      font-size: 0.9em;
     }
 
     @media only screen and (min-width: $media-md) {
-  
       border-width: $water-measure-size-md;
-      font-size: 0.9em;
-      left: 10px;
+      font-size: 1em;
     }
 
     @media only screen and (min-width: $media-lg) {
-  
       border-width: $water-measure-size-lg;
-      font-size: 1.1em;
-      left: 15px;
+      font-size: 1.2em;
     }
   }
 }
